--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,8 +96,11 @@ jobs:
           sudo -H pip install setuptools
           yarn build:mac
         env:
+          # Only set code signing vars if CSC_LINK secret exists (main repo only)
           CSC_LINK: ${{ secrets.CSC_LINK }}
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          # Disable code signing auto-discovery when secrets are missing (forks)
+          CSC_IDENTITY_AUTO_DISCOVERY: ${{ secrets.CSC_LINK != '' && 'true' || 'false' }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
