🔧 fix: properly skip code signing in forks
- Add check step to detect if CSC_LINK secret exists
- Split macOS build into conditional steps based on secret availability
- When secrets unavailable (forks), completely omit CSC_* env vars
- Fixes workflow syntax error: can't compare secrets directly in if conditions
- Fixes electron-builder error: empty CSC_LINK was interpreted as file path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,20 +90,42 @@ jobs:
           RENDERER_VITE_AIHUBMIX_SECRET: ${{ secrets.RENDERER_VITE_AIHUBMIX_SECRET }}
           RENDERER_VITE_PPIO_APP_SECRET: ${{ secrets.RENDERER_VITE_PPIO_APP_SECRET }}
 
-      - name: Build Mac
+      - name: Check code signing availability
         if: matrix.os == 'macos-latest'
+        id: check-signing
+        run: |
+          if [ -n "$CSC_LINK" ]; then
+            echo "available=true" >> $GITHUB_OUTPUT
+          else
+            echo "available=false" >> $GITHUB_OUTPUT
+          fi
+        env:
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+
+      - name: Build Mac (with code signing)
+        if: matrix.os == 'macos-latest' && steps.check-signing.outputs.available == 'true'
         run: |
           sudo -H pip install setuptools
           yarn build:mac
         env:
-          # Only set code signing vars if CSC_LINK secret exists (main repo only)
           CSC_LINK: ${{ secrets.CSC_LINK }}
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
-          # Disable code signing auto-discovery when secrets are missing (forks)
-          CSC_IDENTITY_AUTO_DISCOVERY: ${{ secrets.CSC_LINK != '' && 'true' || 'false' }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_OPTIONS: --max-old-space-size=8192
+          MAIN_VITE_CHERRYAI_CLIENT_SECRET: ${{ secrets.MAIN_VITE_CHERRYAI_CLIENT_SECRET }}
+          MAIN_VITE_MINERU_API_KEY: ${{ secrets.MAIN_VITE_MINERU_API_KEY }}
+          RENDERER_VITE_AIHUBMIX_SECRET: ${{ secrets.RENDERER_VITE_AIHUBMIX_SECRET }}
+          RENDERER_VITE_PPIO_APP_SECRET: ${{ secrets.RENDERER_VITE_PPIO_APP_SECRET }}
+
+      - name: Build Mac (without code signing)
+        if: matrix.os == 'macos-latest' && steps.check-signing.outputs.available == 'false'
+        run: |
+          sudo -H pip install setuptools
+          yarn build:mac
+        env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_OPTIONS: --max-old-space-size=8192
           MAIN_VITE_CHERRYAI_CLIENT_SECRET: ${{ secrets.MAIN_VITE_CHERRYAI_CLIENT_SECRET }}
