--- a/.github/workflows/github-issue-tracker.yml
+++ b/.github/workflows/github-issue-tracker.yml
@@ -15,7 +15,6 @@ jobs:
     permissions:
       issues: write
       contents: read
-      id-token: write
 
     steps:
       - name: Checkout repository
@@ -58,55 +57,45 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Process issue with Claude
+      - name: Summarize issue with Claude
         if: steps.check_time.outputs.should_delay == 'false'
+        id: summarize
         uses: anthropics/claude-code-action@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          allowed_non_write_users: "*"
           anthropic_api_key: ${{ secrets.CLAUDE_TRANSLATOR_APIKEY }}
-          claude_args: "--allowed-tools Bash(gh issue:*),Bash(node scripts/feishu-notify.js)"
           prompt: |
-            你是一个GitHub Issue自动化处理助手。请完成以下任务：
+            Please analyze this GitHub issue and provide a concise summary in Chinese (中文).
 
-            ## 当前Issue信息
-            - Issue编号：#${{ github.event.issue.number }}
-            - 标题：${{ github.event.issue.title }}
-            - 作者：${{ github.event.issue.user.login }}
-            - URL：${{ github.event.issue.html_url }}
-            - 内容：${{ github.event.issue.body }}
-            - 标签：${{ join(github.event.issue.labels.*.name, ', ') }}
+            Issue #${{ github.event.issue.number }}: ${{ github.event.issue.title }}
+            Author: ${{ github.event.issue.user.login }}
+            URL: ${{ github.event.issue.html_url }}
 
-            ## 任务步骤
+            Issue Body:
+            ${{ github.event.issue.body }}
 
-            1. **分析并总结issue**
-               用中文（简体）提供简洁的总结（2-3句话），包括：
-               - 问题的主要内容
-               - 核心诉求
-               - 重要的技术细节
+            Please provide:
+            1. A brief Chinese summary of the issue (2-3 sentences)
+            2. The main problem or request
+            3. Any important technical details mentioned
 
-            2. **发送飞书通知**
-               使用以下命令发送飞书通知（注意：ISSUE_SUMMARY需要用引号包裹）：
-               ```bash
-               ISSUE_URL="${{ github.event.issue.html_url }}" \
-               ISSUE_NUMBER="${{ github.event.issue.number }}" \
-               ISSUE_TITLE="${{ github.event.issue.title }}" \
-               ISSUE_AUTHOR="${{ github.event.issue.user.login }}" \
-               ISSUE_LABELS="${{ join(github.event.issue.labels.*.name, ',') }}" \
-               ISSUE_SUMMARY="<你生成的中文总结>" \
-               node scripts/feishu-notify.js
-               ```
-
-            ## 注意事项
-            - 总结必须使用简体中文
-            - ISSUE_SUMMARY 在传递给 node 命令时需要正确转义特殊字符
-            - 如果issue内容为空，也要提供一个简短的说明
-
-            请开始执行任务！
+            Format your response in clean markdown, suitable for display in a notification card.
+            Keep it concise but informative.
         env:
           ANTHROPIC_BASE_URL: ${{ secrets.CLAUDE_TRANSLATOR_BASEURL }}
+
+      - name: Send to Feishu immediately
+        if: steps.check_time.outputs.should_delay == 'false'
+        env:
           FEISHU_WEBHOOK_URL: ${{ secrets.FEISHU_WEBHOOK_URL }}
           FEISHU_WEBHOOK_SECRET: ${{ secrets.FEISHU_WEBHOOK_SECRET }}
+          ISSUE_URL: ${{ github.event.issue.html_url }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
+          ISSUE_LABELS: ${{ join(github.event.issue.labels.*.name, ',') }}
+          ISSUE_SUMMARY: ${{ steps.summarize.outputs.response }}
+        run: |
+          node scripts/feishu-notify.js
 
   process-pending-issues:
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
@@ -114,7 +103,6 @@ jobs:
     permissions:
       issues: write
       contents: read
-      id-token: write
 
     steps:
       - name: Checkout repository
